# nordic

./: .clang-format  README.md  meson.build
src/: meson.build  nordic_utils.hpp  nrfMDK_License.txt
src/app/nrf52_test_app/: blinky.c  blinky_migratory.cpp  meson.build  sdk_config.h
src/drivers/: meson.build  nordic_nvic.hpp  nrf51_i2c_master.hpp  nrf52_i2c_master.hpp  nrf_gpio.hpp
src/drivers/helpers/: gpio_helper.cpp  gpio_helper.hpp  twi_helper.cpp  twi_helper.hpp  twi_helper_.hpp  twim_helper.cpp  twim_helper.hpp  twim_helper_.hpp
src/freertos/: FreeRTOSConfig.h  meson.build
src/freertos/nrf51/: port.c  port_cmsis.c  port_cmsis_systick.c  portmacro_cmsis.h
src/freertos/nrf52/: port.c  port_cmsis.c  port_cmsis_systick.c  portmacro_cmsis.h
src/hw_platforms/: meson.build
src/hw_platforms/nrf52840_dongle/: meson.build  nrf52_dongle_hw_platform.cpp  nrf52_dongle_hw_platform.hpp
src/hw_platforms/nrf52dk/: meson.build  nrf52dk_fwdemo_hw_platform.cpp  nrf52dk_fwdemo_hw_platform.hpp
src/include/: nordic_defs.hpp  nordic_utils.hpp
src/mdk/: gcc_startup_nrf52840.S  nrf.h  nrf51.h  nrf52.h  nrf52810.h  nrf52810.svd  nrf52810_bitfields.h  nrf52811.h  nrf52811.svd  nrf52811_bitfields.h  nrf52840.h  nrf52840.svd  nrf52840_bitfields.h  nrf9160.h  nrf9160.svd  nrf9160_bitfields.h  nrf_peripherals.h
src/processors/: meson.build
src/processors/nrf52840/: meson.build  nrf52840.cpp  nrf52840.hpp  processor_architecture.hpp  processor_includes.hpp
subprojects/: arm-architecture.wrap  cmsis-5.wrap  embvm-core.wrap  nrfx.wrap
subprojects/packagefiles/nrfx-build/: meson.build
